# esp-cam-idf-mqtt-ota

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  app-main.c  define.h  esp_cam.c  esp_cam.h  main.rar  mqtt_task.c  mqtt_task.h  uart_task.c  uart_task.h  wifi_ota.c  wifi_ota.h
